got basic demo working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ license = "MIT"
 repository = "https://github.com/TyOverby/chipmunk"
 description = "Rust bindings to the chipmunk-2d physics engine.  This crate is a work in progress."
 
+[dependencies.chipmunk-sys]
+path = "../chipmunk-sys"
 
 [dependencies]
-chipmunk-sys = "0.0.*"
 void = "*"
